--- a/Application/nbproject/project.properties
+++ b/Application/nbproject/project.properties
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Dentista
-main.class=UI.Pag1
+main.class=UI.Cadastro
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
